# ClashKingAssets

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  build.py  download_html.py  download_sc.py  effects.json  extractor.md  generate_manifest.py  go.mod  go.sum  main.go  main.py  main_test.go  pyproject.toml  requirements.txt  test_build.py  test_generate_manifest.py  test_viewer.py  update_all.py  update_assets.py  update_image_map.py  update_image_ratio.py  update_static.py  update_storage.py  update_utils.py  utils.py
.github/workflows/: apply-cors.yml  main.yml  release-assets.yml  sync.yml  update-all.yml
assets/: building_data.json  image_map.json  manifest.json  sample_building_data.json  static_data.json  translations.json  viewer.css  viewer.html  viewer.js
assets/app-data/: events_data.json  game_data.json  gears_data.json  heroes_data.json  league_data.json  pets_data.json  player_league_data.json  spells_data.json  troop_categories_data.json  troop_data.json  troops_data.json
assets/bot/: emojis.json
internal/render/: exporter.go  exporter_test.go  metal_compositor.go  metal_compositor_darwin.go  metal_compositor_darwin.m  metal_compositor_darwin_test.go  metal_compositor_stub.go  options.go  root_process.go  root_process_test.go  texture_export.go  texture_export_test.go  webp.go  webp_benchmark_test.go  webp_test.go
internal/sc/: astc_gpu_darwin.go  astc_gpu_darwin.m  astc_gpu_darwin_test.go  astc_gpu_stub.go  compression.go  compression_test.go  movieclip.go  (+11 more)
templates/: base.html  gallery.html  upload.html
tests/: test_build.py
(+76 files in other folders)
